--- a/model.ipynb
+++ b/model.ipynb
@@ -28,7 +28,7 @@
    ],
    "source": [
     "train_data=keras.utils.image_dataset_from_directory(\n",
-    "    directory=r'D:\\CODING\\Project Dog Vs Cat\\train',\n",
+    "    directory='\\train',\n",
     "    labels=\"inferred\",\n",
     "    label_mode=\"int\",\n",
     "    batch_size=32,\n",
@@ -37,7 +37,7 @@
     ")\n",
     "\n",
     "test_data=keras.utils.image_dataset_from_directory(\n",
-    "    directory=r'D:\\CODING\\Project Dog Vs Cat\\test',\n",
+    "    directory='\\test',\n",
     "    labels=\"inferred\",\n",
     "    label_mode=\"int\",\n",
     "    batch_size=32,\n",
