--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
    ],
    "source": [
     "train_data=keras.utils.image_dataset_from_directory(\n",
-    "    directory='\\train',\n",
+    "    directory=r'D:\\CODING\\Project Dog Vs Cat\\train',\n",
     "    labels=\"inferred\",\n",
     "    label_mode=\"int\",\n",
     "    batch_size=32,\n",
@@ -37,7 +37,7 @@
     ")\n",
     "\n",
     "test_data=keras.utils.image_dataset_from_directory(\n",
-    "    directory='\\test',\n",
+    "    directory=r'D:\\CODING\\Project Dog Vs Cat\\test',\n",
     "    labels=\"inferred\",\n",
     "    label_mode=\"int\",\n",
     "    batch_size=32,\n",
