--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,31 +230,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m269s\u001b[0m 428ms/step - accuracy: 0.5532 - loss: 0.7159 - val_accuracy: 0.7190 - val_loss: 0.5756\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m279s\u001b[0m 444ms/step - accuracy: 0.5619 - loss: 0.7031 - val_accuracy: 0.7354 - val_loss: 0.5380\n",
       "Epoch 2/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m276s\u001b[0m 441ms/step - accuracy: 0.7330 - loss: 0.5380 - val_accuracy: 0.7736 - val_loss: 0.4800\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m275s\u001b[0m 440ms/step - accuracy: 0.7289 - loss: 0.5356 - val_accuracy: 0.7572 - val_loss: 0.5311\n",
       "Epoch 3/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m274s\u001b[0m 438ms/step - accuracy: 0.7985 - loss: 0.4310 - val_accuracy: 0.7610 - val_loss: 0.5089\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m295s\u001b[0m 472ms/step - accuracy: 0.8124 - loss: 0.4024 - val_accuracy: 0.7624 - val_loss: 0.5658\n",
       "Epoch 4/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m273s\u001b[0m 436ms/step - accuracy: 0.8639 - loss: 0.3123 - val_accuracy: 0.7532 - val_loss: 0.6605\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m284s\u001b[0m 454ms/step - accuracy: 0.8989 - loss: 0.2377 - val_accuracy: 0.7492 - val_loss: 0.8143\n",
       "Epoch 5/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m274s\u001b[0m 438ms/step - accuracy: 0.9237 - loss: 0.1815 - val_accuracy: 0.7726 - val_loss: 0.9678\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m279s\u001b[0m 446ms/step - accuracy: 0.9553 - loss: 0.1191 - val_accuracy: 0.7486 - val_loss: 1.1350\n",
       "Epoch 6/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m297s\u001b[0m 475ms/step - accuracy: 0.9636 - loss: 0.0971 - val_accuracy: 0.7740 - val_loss: 1.0829\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m298s\u001b[0m 477ms/step - accuracy: 0.9720 - loss: 0.0780 - val_accuracy: 0.7548 - val_loss: 1.1229\n",
       "Epoch 7/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m280s\u001b[0m 448ms/step - accuracy: 0.9779 - loss: 0.0627 - val_accuracy: 0.7810 - val_loss: 1.1735\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m293s\u001b[0m 469ms/step - accuracy: 0.9797 - loss: 0.0610 - val_accuracy: 0.7668 - val_loss: 1.2690\n",
       "Epoch 8/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m290s\u001b[0m 464ms/step - accuracy: 0.9871 - loss: 0.0406 - val_accuracy: 0.7838 - val_loss: 1.3414\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m295s\u001b[0m 472ms/step - accuracy: 0.9844 - loss: 0.0476 - val_accuracy: 0.7644 - val_loss: 1.1661\n",
       "Epoch 9/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m288s\u001b[0m 461ms/step - accuracy: 0.9864 - loss: 0.0396 - val_accuracy: 0.7712 - val_loss: 1.2286\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m291s\u001b[0m 466ms/step - accuracy: 0.9898 - loss: 0.0284 - val_accuracy: 0.7576 - val_loss: 1.6642\n",
       "Epoch 10/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m291s\u001b[0m 466ms/step - accuracy: 0.9928 - loss: 0.0237 - val_accuracy: 0.7684 - val_loss: 1.3643\n"
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m283s\u001b[0m 453ms/step - accuracy: 0.9893 - loss: 0.0390 - val_accuracy: 0.7562 - val_loss: 1.5851\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x2569c30ba40>"
+       "<keras.src.callbacks.history.History at 0x1b88c233dd0>"
       ]
      },
      "execution_count": 8,
@@ -270,10 +270,17 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
    "source": [
-    "import pickle\n",
-    "pickle.dump(model,open(\"model.pkl\",\"wb\"))"
+    "model.save(\"model.h5\")"
    ]
   },
   {
